--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 	],
 	"require": {
 		"php": ">=8.3 <9",
+		"ext-intl": "*",
 		"latte/latte": "^v2.11",
 		"nette/application": "^3.1",
 		"nette/di": "^3.0",
