--- a/src/Drago/Commerce/DI/services.neon
+++ b/src/Drago/Commerce/DI/services.neon
@@ -22,4 +22,4 @@ services:
 	- Drago\Commerce\UI\ShoppingCart\SummaryCartControl
 	- Drago\Commerce\UI\ShoppingCart\MiniCartControl
 	- Drago\Commerce\UI\Order\DeliveryControl
-	- Drago\Commerce\UI\Order\SummaryControl
+	- Drago\Commerce\UI\Order\SummaryOrderControl
