--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"nette/di": "^3.0",
 		"drago-ex/application": "^1.0",
 		"drago-ex/database": "^2.0",
+		"drago-ex/forms": "@dev",
 		"brick/money": "^0.5",
 		"brick/postcode": "^0.2",
 		"nepada/phone-number-input": "^1.0",
